[package]
name = "ttnprom"
version = "0.1.0"
authors = ["Kloenk <kloenk@kloenk.de>"]
edition = "2018"

[features]
default = ["completion"]
completion = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["color"]}